# AgentSeal-Benchmark-Forensics

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
agentseal/: __init__.py  __main__.py  auto_discover.py  cli.py  codeseal_detector.py  engine.py  evidence_links.py  github_auth.py  github_fetch.py  independent_search.py  interactive.py  loaders.py  model_cutoffs.py  narrative.py  narrative_gen.py  novel_sources.py  pro_audit.py  provenance.py  report.py  risk.py  runtime.py  schemas.py  similarity.py  stack_v2_filter.py  tui.py
agentseal/data/: README.md
docs/: AI_NATIVE_DEVELOPMENT.md  ARCHITECTURE.md  BETA_LIMITATIONS.md  CAPABILITIES.md  COMMANDS.md  INSTALL.md  METHODOLOGY.md  OPEN_SOURCE_RELEASE_GUIDE.md  REPORT_REVIEW_CHECKLIST.md  TOKENS.md  WORKFLOWS.md  agentseal-swe-bench-pro-audit.md  index.md
examples/: README.md
scripts/: smoke_test.py
tests/: test_basic_imports.py  test_runtime_robustness.py  test_solution_mode_regressions.py
